// Vitest Snapshot v1

exports[`NOTE DETAIL: > when the language set is English: > creation of a note: > should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1ubh0lm"
  >
    <div
      class="css-qc8xmq"
    >
      <svg
        aria-labelledby="svg-inline--fa-title-91hGjc4pxNyR"
        class="svg-inline--fa fa-left-long fa-xl "
        data-icon="left-long"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-91hGjc4pxNyR"
        >
          Back to home
        </title>
        <path
          d="M177.5 98c-8.8-3.8-19-2-26 4.6l-144 136C2.7 243.1 0 249.4 0 256s2.7 12.9 7.5 17.4l144 136c7 6.6 17.2 8.4 26 4.6s14.5-12.5 14.5-22l0-88 288 0c17.7 0 32-14.3 32-32l0-32c0-17.7-14.3-32-32-32l-288 0 0-88c0-9.6-5.7-18.2-14.5-22z"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-labelledby="svg-inline--fa-title-qtiIgZFezjqC"
        class="svg-inline--fa fa-check fa-xl "
        data-icon="check"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-qtiIgZFezjqC"
        >
          Add note
        </title>
        <path
          d="M470.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L192 338.7 425.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
          fill="currentColor"
        />
      </svg>
    </div>
    <textarea
      aria-label="note content"
      class="css-vhid4f"
    />
  </div>
</DocumentFragment>
`;

exports[`NOTE DETAIL: > when the language set is English: > deletion of a note: > should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1ubh0lm"
  >
    <div
      class="css-qc8xmq"
    >
      <svg
        aria-labelledby="svg-inline--fa-title-BfHS4uG7uKF2"
        class="svg-inline--fa fa-left-long fa-xl "
        data-icon="left-long"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-BfHS4uG7uKF2"
        >
          Back to home
        </title>
        <path
          d="M177.5 98c-8.8-3.8-19-2-26 4.6l-144 136C2.7 243.1 0 249.4 0 256s2.7 12.9 7.5 17.4l144 136c7 6.6 17.2 8.4 26 4.6s14.5-12.5 14.5-22l0-88 288 0c17.7 0 32-14.3 32-32l0-32c0-17.7-14.3-32-32-32l-288 0 0-88c0-9.6-5.7-18.2-14.5-22z"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-labelledby="svg-inline--fa-title-HLJutqPjdACv"
        class="svg-inline--fa fa-trash-can fa-xl "
        data-icon="trash-can"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-HLJutqPjdACv"
        >
          Remove note
        </title>
        <path
          d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0H284.2c12.1 0 23.2 6.8 28.6 17.7L320 32h96c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 96 0 81.7 0 64S14.3 32 32 32h96l7.2-14.3zM32 128H416V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V128zm96 64c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16z"
          fill="currentColor"
        />
      </svg>
    </div>
    <textarea
      aria-label="note content"
      class="css-vhid4f"
    >
      Hello test 1
Testing 1
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`NOTE DETAIL: > when the language set is English: > edition of a note: > should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1ubh0lm"
  >
    <div
      class="css-qc8xmq"
    >
      <svg
        aria-labelledby="svg-inline--fa-title-ppp3lUulLCQl"
        class="svg-inline--fa fa-left-long fa-xl "
        data-icon="left-long"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-ppp3lUulLCQl"
        >
          Back to home
        </title>
        <path
          d="M177.5 98c-8.8-3.8-19-2-26 4.6l-144 136C2.7 243.1 0 249.4 0 256s2.7 12.9 7.5 17.4l144 136c7 6.6 17.2 8.4 26 4.6s14.5-12.5 14.5-22l0-88 288 0c17.7 0 32-14.3 32-32l0-32c0-17.7-14.3-32-32-32l-288 0 0-88c0-9.6-5.7-18.2-14.5-22z"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-labelledby="svg-inline--fa-title-cIb2FX4qnCXE"
        class="svg-inline--fa fa-trash-can fa-xl "
        data-icon="trash-can"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-cIb2FX4qnCXE"
        >
          Remove note
        </title>
        <path
          d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0H284.2c12.1 0 23.2 6.8 28.6 17.7L320 32h96c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 96 0 81.7 0 64S14.3 32 32 32h96l7.2-14.3zM32 128H416V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V128zm96 64c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16z"
          fill="currentColor"
        />
      </svg>
    </div>
    <textarea
      aria-label="note content"
      class="css-vhid4f"
    >
      Hello test 1
Testing 1
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`NOTE DETAIL: > when the language set is Spanish: > creation of a note: > should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1ubh0lm"
  >
    <div
      class="css-qc8xmq"
    >
      <svg
        aria-labelledby="svg-inline--fa-title-F3IOcii9ceQK"
        class="svg-inline--fa fa-left-long fa-xl "
        data-icon="left-long"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-F3IOcii9ceQK"
        >
          Volver a inicio
        </title>
        <path
          d="M177.5 98c-8.8-3.8-19-2-26 4.6l-144 136C2.7 243.1 0 249.4 0 256s2.7 12.9 7.5 17.4l144 136c7 6.6 17.2 8.4 26 4.6s14.5-12.5 14.5-22l0-88 288 0c17.7 0 32-14.3 32-32l0-32c0-17.7-14.3-32-32-32l-288 0 0-88c0-9.6-5.7-18.2-14.5-22z"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-labelledby="svg-inline--fa-title-tkFAHgD08yq0"
        class="svg-inline--fa fa-check fa-xl "
        data-icon="check"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-tkFAHgD08yq0"
        >
          Agregar nota
        </title>
        <path
          d="M470.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L192 338.7 425.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
          fill="currentColor"
        />
      </svg>
    </div>
    <textarea
      aria-label="note content"
      class="css-vhid4f"
    />
  </div>
</DocumentFragment>
`;

exports[`NOTE DETAIL: > when the language set is Spanish: > deletion of a note: > should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1ubh0lm"
  >
    <div
      class="css-qc8xmq"
    >
      <svg
        aria-labelledby="svg-inline--fa-title-b8g5PVVYPEkQ"
        class="svg-inline--fa fa-left-long fa-xl "
        data-icon="left-long"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-b8g5PVVYPEkQ"
        >
          Volver a inicio
        </title>
        <path
          d="M177.5 98c-8.8-3.8-19-2-26 4.6l-144 136C2.7 243.1 0 249.4 0 256s2.7 12.9 7.5 17.4l144 136c7 6.6 17.2 8.4 26 4.6s14.5-12.5 14.5-22l0-88 288 0c17.7 0 32-14.3 32-32l0-32c0-17.7-14.3-32-32-32l-288 0 0-88c0-9.6-5.7-18.2-14.5-22z"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-labelledby="svg-inline--fa-title-f8wO7KRu6AZZ"
        class="svg-inline--fa fa-trash-can fa-xl "
        data-icon="trash-can"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-f8wO7KRu6AZZ"
        >
          Eliminar nota
        </title>
        <path
          d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0H284.2c12.1 0 23.2 6.8 28.6 17.7L320 32h96c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 96 0 81.7 0 64S14.3 32 32 32h96l7.2-14.3zM32 128H416V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V128zm96 64c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16z"
          fill="currentColor"
        />
      </svg>
    </div>
    <textarea
      aria-label="note content"
      class="css-vhid4f"
    >
      Hello test 1
Testing 1
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`NOTE DETAIL: > when the language set is Spanish: > edition of a note: > should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1ubh0lm"
  >
    <div
      class="css-qc8xmq"
    >
      <svg
        aria-labelledby="svg-inline--fa-title-ZHLJak7lO6oy"
        class="svg-inline--fa fa-left-long fa-xl "
        data-icon="left-long"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-ZHLJak7lO6oy"
        >
          Volver a inicio
        </title>
        <path
          d="M177.5 98c-8.8-3.8-19-2-26 4.6l-144 136C2.7 243.1 0 249.4 0 256s2.7 12.9 7.5 17.4l144 136c7 6.6 17.2 8.4 26 4.6s14.5-12.5 14.5-22l0-88 288 0c17.7 0 32-14.3 32-32l0-32c0-17.7-14.3-32-32-32l-288 0 0-88c0-9.6-5.7-18.2-14.5-22z"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-labelledby="svg-inline--fa-title-56vIQKhJLZdt"
        class="svg-inline--fa fa-trash-can fa-xl "
        data-icon="trash-can"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-56vIQKhJLZdt"
        >
          Eliminar nota
        </title>
        <path
          d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0H284.2c12.1 0 23.2 6.8 28.6 17.7L320 32h96c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 96 0 81.7 0 64S14.3 32 32 32h96l7.2-14.3zM32 128H416V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V128zm96 64c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16z"
          fill="currentColor"
        />
      </svg>
    </div>
    <textarea
      aria-label="note content"
      class="css-vhid4f"
    >
      Hello test 1
Testing 1
    </textarea>
  </div>
</DocumentFragment>
`;
